--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,11 +5,9 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
@@ -23,3 +21,168 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-top: 36px;
+  margin-bottom: 36px;
+}
+
+.search-input {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  padding: 8px 16px;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  outline: none;
+}
+
+.search-input:hover {
+  border: 1px solid #000000;
+}
+
+.search-input:focus {
+  border: 1px solid #4e75ff;
+}
+
+.button {
+  height: 40px;
+  padding: 8px 8px;
+  border-radius: 8px;
+  background: #4e75ff;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 0;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+
+.button:hover {
+  background: #6c8cff;
+}
+
+/* ========= Gallery ========== */
+
+.gallery-list {
+  display: flex;
+  width: 1440px;
+  height: auto;
+  padding-left: 156px;
+  padding-right: 156px;
+  padding-bottom: 24px;
+  gap: 21px;
+  margin: 0 auto;
+  background: #fff;
+  flex-wrap: wrap;
+}
+
+.gallery-item {
+  list-style: none;
+  border: 1px solid #808080;
+}
+
+.gallery-image-box {
+  overflow: hidden;
+}
+
+.gallery-section img {
+  position: relative;
+  width: 360px;
+  height: 200px;
+  object-fit: cover;
+  transition: transform 250ms ease-in-out;
+}
+
+.gallery-section img:hover {
+  transform: scale(1.05);
+}
+
+.gallery-stats {
+  display: flex;
+  justify-content: space-around;
+  padding: 4px;
+}
+
+.gallery-stats ul {
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 0.04em;
+  text-align: center;
+  color: #2e2f42;
+}
+
+.gallery-stats li {
+  font-size: 12px;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-align: center;
+}
+
+.load-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.load-btn {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 22px;
+}
+
+.loader {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 22px;
+  width: 48px;
+  height: 48px;
+  border: 5px dotted #3b5dbb;
+  border-radius: 50%;
+  position: relative;
+  box-sizing: border-box;
+  animation: rotation 2s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* ========= /Gallery ========== */
